--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   eva_icons_flutter: ^3.0.0
   flutter_svg: ^0.22.0
   flutter_launcher_icons: '^0.9.1'
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
